--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,12 @@
 version: 0.1
 
 phases:
+  install:
+    runtime-versions:
+      python: 3.7
+      ruby: 2.6
+      nodejs: 10
+      dotnet: 2.2
   build:
     commands:
       - echo Nothing to do yet
