--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "dependencies": {
     "gatsby": "^2.13.25",
     "gatsby-plugin-sass": "^2.1.3",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-remark-images": "^3.1.6",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-remark": "^2.6.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
