buildspec failure fix attemp one

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+        nodejs: 11.8.0
     commands:
       - echo Installing Gatsby and Gatsby-CLI...
       - npm install -g gatsby
