buildspec failure fix attemp 3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
   install:
     runtime-versions:
         nodejs: 10
-    commands:
-      - echo Installing Gatsby and Gatsby-CLI...
-      - npm install -g gatsby
-      - npm install -g gatsby-cli
+    # commands:
+    #   - echo Installing Gatsby and Gatsby-CLI...
+    #   - npm install -g gatsby
+    #   - npm install -g gatsby-cli
   pre_build:
     commands:
       - echo Installing Node packages...
