--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
   install:
     runtime-versions:
         nodejs: 10
-    # commands:
-    #   - echo Installing Gatsby and Gatsby-CLI...
+    commands:
+      - echo Installing Gatsby and Gatsby-CLI...
     #   - npm install -g gatsby
-    #   - npm install -g gatsby-cli
+      - npm install -g gatsby-cli
   pre_build:
     commands:
       - echo Installing Node packages...
@@ -15,11 +15,13 @@ phases:
   build:
     commands:
       - echo Build initiated...
-      - npm run build
+      # - npm run build
+      - gatsby clean
+      - gatsby build
   post_build:
     commands:
       - echo Synchronizing public directory...
-      - aws s3 sync ./public/ s3://thedevelopark.com --delete
+      - aws s3 sync ./public/ s3://thedevelopark.com --delete --acl "public-read"
 artifacts:
   base-directory: public
   files:
