--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,21 +7,19 @@ phases:
     commands:
       - echo Installing Gatsby and Gatsby-CLI...
     #   - npm install -g gatsby
-      - npm install -g gatsby-cli
+      # - npm install -g gatsby-cli
   pre_build:
     commands:
       - echo Installing Node packages...
-      - npm install
+      # - npm install
   build:
     commands:
       - echo Build initiated...
-      # - npm run build
-      - gatsby clean
-      - gatsby build
+      - npm run build
   post_build:
     commands:
       - echo Synchronizing public directory...
-      - aws s3 sync ./public/ s3://thedevelopark.com --delete --acl "public-read"
+      - aws s3 cp ./public/ s3://thedevelopark.com --delete
 artifacts:
   base-directory: public
   files:
