buildspec failure fix attemp 8 s3 delete and put allowed

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - echo Synchronizing public directory....
+      - echo Synchronizing public directory...
       - aws s3 sync ./public/ s3://thedevelopark.com --delete
       # - aws s3 sync ./public/ s3://thedevelopark.com --delete --acl "public-read"
       # - aws s3 cp ./public/ s3://thedevelopark.com
