--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,4 @@
+# Option 1 *****************************************
 # version: 0.2
 
 # phases:
@@ -26,7 +27,34 @@
 #     - '**/*'
 #   discard-paths: yes
 
-# Another way
+# Option 2 *****************************************
+# version: 0.2
+
+# phases:
+#   install:
+#     runtime-versions:
+#         nodejs: 10
+#   pre_build:
+#     commands:
+#       - echo Removing objects in the S3 bucket...
+#       - aws s3 rm s3://thedevelopark.com --recursive
+#   build:
+#     commands:
+#       - echo Preparing for moving files to S3...
+#       - mkdir build-output
+#       - find . -type d -name public -exec cp -R {} build-output \;
+#       - find . -mindepth 1 -name build-output -prune -o -exec rm -rf {} +
+#   post_build:
+#     commands:
+#       - echo Moving files to S3...
+#       # - mv build-output/**/* ./
+#       - mv build-output/* ./
+#       - rm -R build-output
+# artifacts:
+#   files:
+#     - '**/*'
+
+# Option 3 *****************************************
 version: 0.2
 
 phases:
@@ -39,16 +67,11 @@ phases:
       - aws s3 rm s3://thedevelopark.com --recursive
   build:
     commands:
-      - echo Preparing for moving files to S3...
-      - mkdir build-output
-      - find . -type d -name public -exec cp -R {} build-output \;
-      - find . -mindepth 1 -name build-output -prune -o -exec rm -rf {} +
+      - echo Doing nothing here for now...
   post_build:
     commands:
-      - echo Moving files to S3...
-      # - mv build-output/**/* ./
-      - mv build-output/* ./
-      - rm -R build-output
+      - echo Copying files in public directory to S3...
+      - aws s3 cp ./public/ s3://thedevelopark.com --recursive
 artifacts:
   files:
     - '**/*'
