--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
   build:
     commands:
       - echo Build initiated...
-      # - npm run build
+      - npm run build
   post_build:
     commands:
       - echo Synchronizing public directory...!
