--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - 11.8.0
 install: npm install
-script: npm run build
+script: gatsby clean && gatsby build
 deploy:
   provider: s3
   access_key_id: $AWS_KEY
