--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
-    "gatsby": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby": "^2.13.39",
+    "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
@@ -20,7 +20,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-images": "^0.5.19",
+    "react-images": "1.0.0",
     "react-scrollspy": "^3.4.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
