--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,31 +1,31 @@
 # Option 1 *****************************************
-# version: 0.2
+version: 0.2
 
-# phases:
-#   install:
-#     runtime-versions:
-#         nodejs: 10
-#     commands:
-#       - echo Installing Gatsby and Gatsby-CLI...
-#       - npm install -g gatsby
-#       - npm install -g gatsby-cli
-#   pre_build:
-#     commands:
-#       - echo Installing Node packages...
-#       - npm install
-#   build:
-#     commands:
-#       - echo Build initiated...
-#       - npm run build
-#   post_build:
-#     commands:
-#       - echo Synchronizing public directory...
-#       - aws s3 sync ./public/ s3://thedevelopark.com --delete
-# artifacts:
-#   base-directory: public
-#   files:
-#     - '**/*'
-#   discard-paths: yes
+phases:
+  install:
+    runtime-versions:
+        nodejs: 10
+    commands:
+      - echo Installing Gatsby and Gatsby-CLI...
+      - npm install -g gatsby
+      - npm install -g gatsby-cli
+  pre_build:
+    commands:
+      - echo Installing Node packages...
+      - npm install
+  build:
+    commands:
+      - echo Build initiated...
+      - npm run build
+  post_build:
+    commands:
+      - echo Synchronizing public directory...
+      - aws s3 sync ./public/ s3://thedevelopark.com --delete
+artifacts:
+  base-directory: public
+  files:
+    - '**/*'
+  discard-paths: yes
 
 # Option 2 *****************************************
 # version: 0.2
